deploy/welcome/base/welcome.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: welcome
  name: welcome
  namespace: welcome
spec:
  selector:
    matchLabels:
      app: welcome
  template:
    metadata:
      labels:
        app: welcome
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: CLUSTER_NAME
          value: training
        - name: CLUSTER_DOMAIN
          value: cluster.songlaa.com
        - name: TOKEN
          valueFrom:
            secretKeyRef:
              name: token
              key: token
        image: ghcr.io/songlaa/welcome-training-app:latest
        imagePullPolicy: Always
        name: welcome
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: welcome
  namespace: welcome
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: welcome
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome
  namespace: welcome
spec:
  ingressClassName: haproxy
  rules:
  - host: welcome.training.cluster.songlaa.com
    http:
      paths:
      - backend:
          service:
            name: welcome
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - welcome.training.cluster.songlaa.com
