deploy/welcome/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-haproxy
  namespace: welcome
spec:
  podSelector:
    matchLabels:
      app: welcome
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-haproxy
